[gd_scene load_steps=2 format=3 uid="uid://l57gwx43khf"]

[ext_resource type="Script" uid="uid://ybl75s5bgp2n" path="res://GDDiscord/Godot/Scripts/Networking/add_server.gd" id="1_fg3l7"]

[node name="AddServer" type="Window"]
auto_translate_mode = 1
transparent_bg = true
oversampling_override = 1.0
title = "Add a Server"
initial_position = 5
size = Vector2i(350, 320)
transient = true
exclusive = true
unresizable = true
always_on_top = true
transparent = true
popup_window = true
popup_wm_hint = true
script = ExtResource("1_fg3l7")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Information" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add a server that will be listed in your
server list with information to connect."
horizontal_alignment = 1
text_overrun_behavior = 4

[node name="HS1" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ServerNameI" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server Name"

[node name="P_ServerNameE" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "i.e : \"Wonder Land\""

[node name="HS2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ServerIPI" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "IP Adress / Host Name (optional port)"

[node name="P_ServerIPE" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "i.e : \"127.0.0.1\""

[node name="HS3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
indeterminate = true
editor_preview_indeterminate = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Popup_Add" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Server"

[node name="Popup_Cancel" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
